[project]
name = "llm-block-chinese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.6.1",
]

[project.entry-points.vllm_logits_processor]
"llm_block_chinese.logits_processor.filter_chinese" = "llm_block_chinese.logits_processor:filter_chinese"

